# ssh-reports-hub-fastAPI

./: .dockerignore  .geminiignore  .gitignore  AGENTS.md  API_REFERENCE.md  BACKEND_FLOW.md  CHANGELOG.md  CLAUDE.md  COLUMN_DEPRECATION.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  test_api_logic.py  test_redis_cache.sh  test_regex.py
.agent_tasks/: deepseek_next.md  gemini_agy_next.md  llm_task_queue.json
.github/workflows/: ci.yml  deploy.yml
app/: antigravity_manager.py  cache.py  database.py  deepseek_manager.py  dependencies.py  error_handlers.py  exceptions.py  logging_config.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: admin.py  cnn_sentiment.py  consensus.py  disclosure.py  external_api.py  favorites.py  fcf_screening.py  fnguide_reports.py  notes.py  ords_compat.py  pub_api.py  reports.py  screening.py  sentiment.py
app/services/: cnn_fear_greed.py  fnguide_matcher.py
docs/: AI_SUMMARY_INTEGRATION.md  CHANGELOG.md  CI_CD.md  DEVELOPMENT.md  README.md  api_field_deprecation.md  ords-compat.md  refactoring.md  security.md
migrations/: 20260710_01_recreate_report_views.sql
scripts/: apply_migrations.py  match_fnguide_reports.py  verify_ci.sh
tests/: test_admin_metrics.py  test_api_mocked.py  test_article_url_contract.py  test_cnn_sentiment.py  test_consensus.py  test_consensus_revision.py  test_disclosure.py  test_enricher.py  test_fnguide_matcher.py  test_main.py  test_ords_compat.py  test_ords_external_api_parity.py  test_premium_schemas.py  test_save_time_migration.py  test_summarize.py  test_view_migrations.py
